--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ header { text-align: center; padding: 24px 0 16px; }
 .speed-slider-row { margin: 16px 0 4px; }
 .speed-slider-label-row { display: flex; justify-content: space-between; align-items: center; margin-bottom: 6px; }
 .speed-slider-label { font-weight: 800; color: var(--muted); font-size: 0.78rem; text-transform: uppercase; letter-spacing: 1px; }
-.speed-value-badge { background: var(--purple-soft); border: 2px solid var(--purple); border-radius: 10px; padding: 2px 10px; font-family: 'Fredoka'; font-size: 1rem; color: var(--purple); }
+.speed-value-badge { background: var(--purple-soft); border: 2px solid var(--purple); border-radius: 10px; padding: 2px 12px; font-family: 'Fredoka'; font-size: 0.88rem; color: var(--purple); white-space: nowrap; }
 input[type=range].speed-slider {
   -webkit-appearance: none; appearance: none;
   width: 100%; height: 10px; border-radius: 10px;
@@ -926,7 +926,7 @@ body.bedtime .read-side-btn { opacity: 0.8; }
 
   <!-- SCREEN: Pick (Kid Launchpad) -->
   <div class="screen active" id="screen-pick">
-    <div id="dev-build-tag" style="text-align:center;font-size:0.6rem;font-weight:800;color:#C4A882;letter-spacing:1.5px;margin-bottom:2px;">BUILD V</div>
+    <div id="dev-build-tag" style="text-align:center;font-size:0.6rem;font-weight:800;color:#C4A882;letter-spacing:1.5px;margin-bottom:2px;">BUILD W</div>
     <!-- Kid-Friendly Action Buttons -->
     <div style="display:flex;flex-direction:column;gap:12px;">
       <!-- Read a Story — ORANGE (primary action) -->
@@ -1346,13 +1346,13 @@ body.bedtime .read-side-btn { opacity: 0.8; }
       <div id="read-settings-drawer" style="display:none;margin-top:10px;padding:14px;background:var(--section);border-radius:16px;">
         <div class="voice-row" style="margin:0 0 10px;">
           <span class="voice-label">Voice:</span>
-          <button class="voice-btn sel-voice" data-voice="female">👩 Female</button>
-          <button class="voice-btn" data-voice="male">👨 Male</button>
+          <button class="voice-btn sel-voice" data-voice="female">👩 Woman</button>
+          <button class="voice-btn" data-voice="male">👨 Man</button>
         </div>
         <div class="speed-slider-row" style="margin:0 0 10px;">
           <div class="speed-slider-label-row">
             <span class="speed-slider-label">⚡ Speed</span>
-            <span class="speed-value-badge" id="speed-display">0.9×</span>
+            <span class="speed-value-badge" id="speed-display">🚶 Normal</span>
           </div>
           <input type="range" class="speed-slider" id="speed-slider" min="0.5" max="2.0" step="0.1" value="0.9">
           <div class="speed-emoji-row">
@@ -1361,7 +1361,7 @@ body.bedtime .read-side-btn { opacity: 0.8; }
             <span>🚀 Fast</span>
           </div>
         </div>
-        <button class="btn-main btn-outline" id="btn-reading-mode" style="margin:0;padding:10px 16px;font-size:0.88rem;width:100%;display:flex;align-items:center;justify-content:center;gap:6px;">📖 Reading Mode</button>
+        <button class="btn-main btn-outline" id="btn-reading-mode" style="margin:0;padding:10px 16px;font-size:0.88rem;width:100%;display:flex;align-items:center;justify-content:center;gap:6px;">📖 Big Text Mode</button>
       </div>
 
       <div id="story-info-bar" style="text-align:center;font-size:0.78rem;font-weight:800;color:var(--muted);margin:8px 0 4px;display:none;">
@@ -1794,7 +1794,7 @@ body.bedtime .read-side-btn { opacity: 0.8; }
 <footer>
   <strong>ReadUp!</strong> &nbsp;|&nbsp; Made with 💛 for kids everywhere<br>
   <span class="foot-sub">A Transforming Youth, Inc. Program &nbsp;·&nbsp; ✨ Inspired by Kamryn &amp; Christopher II ✨</span><br>
-  <span id="build-tag" style="font-size:0.6rem;font-weight:800;color:var(--border);letter-spacing:1px;cursor:pointer;" title="Build version">BUILD V</span>
+  <span id="build-tag" style="font-size:0.6rem;font-weight:800;color:var(--border);letter-spacing:1px;cursor:pointer;" title="Build version">BUILD W</span>
 </footer>
 
 <!-- Fixed bottom bar for parent access -->
@@ -2268,9 +2268,17 @@ document.querySelectorAll('.voice-btn').forEach(btn => btn.addEventListener('cli
 // ── Speed slider ──────────────────────────────────────────
 const speedSlider = document.getElementById('speed-slider');
 const speedDisplay = document.getElementById('speed-display');
+function speedLabel(v) {
+  if (v <= 0.6) return '🐢 Super Slow';
+  if (v <= 0.8) return '🐢 Slow';
+  if (v <= 1.0) return '🚶 Normal';
+  if (v <= 1.3) return '🏃 Fast';
+  return '🚀 Super Fast';
+}
+speedDisplay.textContent = speedLabel(0.9);
 speedSlider.addEventListener('input', () => {
   S.speed = parseFloat(speedSlider.value);
-  speedDisplay.textContent = S.speed.toFixed(1) + '×';
+  speedDisplay.textContent = speedLabel(S.speed);
   if (ttsState === 'playing' && ttsAudio) {
     ttsAudio.playbackRate = S.speed;
   }
@@ -6123,7 +6131,7 @@ function applyBedtime(on) {
     if (slider && parseFloat(slider.value) > 0.8) {
       slider.value = 0.8;
       S.speed = 0.8;
-      document.getElementById('speed-display').textContent = '0.8×';
+      document.getElementById('speed-display').textContent = speedLabel(0.8);
     }
   }
 }
